# you-dont-know-django

./: README.md  pyproject.toml
admin/: settings.py
