[tool.poetry]
name = "you dont know django"
version = "0.1.0"
description = "Backends server for a community sourced trivia game. Similar to You Don't Know Jack or Jackbox games."
authors = ["Rich Kevan <rskevan@me.com>"]
readme = "README.md"
repository = "https://github.com/richkevan/you-dont-know-django"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
